--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ showModernAlert("تولدت مبارک 🎉🩵");
     function appendLines(count = 50) {
       for (let i = 0; i < count; i++) {
         const p = document.createElement('div');
-        p.textContent = 'خیلی دوست دارم🩵';
+        p.textContent = 'خیلی دوست دارم دخترم🩵';
         content.appendChild(p);
       }
     }
